--- a/config/database.yml
+++ b/config/database.yml
@@ -37,5 +37,5 @@ test:
 production:
     <<: *default
     database: scraper_production
-    username: rootsrna
+    username: root
     password: root
