--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,11 @@ default: &default
   pool: 5
   username: root
   password: root
-  socket: /tmp/mysql.sock
+
 
 development:
   <<: *default
+  socket: /tmp/mysql.sock
   database: scraper_development
 
 # Warning: The database defined as "test" will be erased and
@@ -36,6 +37,7 @@ test:
 #
 production:
     <<: *default
+    socket: /var/run/mysqld/mysqld.sockocket
     database: scraper_production
     username: root
     password: root
